// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Taxonomy Term renders correctly with posts 1`] = `
<Layout>
  <div
    id="main"
  >
    <section
      id="one"
    >
      <ul
        className="actions"
      >
        <li>
          <a
            href="/"
          >
            « Home
          </a>
        </li>
      </ul>
      <h2>
        Showing posts tagged with: 
        <em>
          CSS
        </em>
      </h2>
      <ul
        className="actions"
      >
        <li>
          <a
            href="youtube-z-index-fix"
          >
            Youtube z-index fix
          </a>
        </li>
        <li>
          <a
            href="css-attribute-selectors"
          >
            CSS attribute Selectors
          </a>
        </li>
      </ul>
    </section>
  </div>
</Layout>
`;

exports[`Taxonomy Term renders correctly without posts 1`] = `
<Layout>
  <div
    id="main"
  >
    <section
      id="one"
    >
      <ul
        className="actions"
      >
        <li>
          <a
            href="/"
          >
            « Home
          </a>
        </li>
      </ul>
      <h2>
        Showing posts tagged with: 
        <em>
          Youtube
        </em>
      </h2>
      <ul
        className="actions"
      />
    </section>
  </div>
</Layout>
`;
